force-app/main/default/objects/Quote/fields/MachineTotalAmountMachine__c.field-meta.xml
<CustomField>
    <fullName>MachineTotalAmountMachine__c</fullName>
    <label>Total Amount Machine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>