force-app/main/default/objects/Quote/fields/MachineTotalAmountMinusDownpayment__c.field-meta.xml
<CustomField>
    <fullName>MachineTotalAmountMinusDownpayment__c</fullName>
    <label>Total Amount Minus Downpayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>