force-app/main/default/objects/Quote/fields/MachineTotalFinancingAmount__c.field-meta.xml
<CustomField>
    <fullName>MachineTotalFinancingAmount__c</fullName>
    <label>Total Financing Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>