force-app/main/default/objects/Quote/fields/MachineTotalMachineValues__c.field-meta.xml
<CustomField>
    <fullName>MachineTotalMachineValues__c</fullName>
    <formula>MachineMachineAccountBalance__c   +  MachineNetAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Machine Total Values</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>