force-app/main/default/objects/Quote/fields/NrOfDifferentCoffeePreps__c.field-meta.xml
<CustomField>
    <fullName>NrOfDifferentCoffeePreps__c</fullName>
    <label># Different Coffee Preparations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>