force-app/main/default/objects/Quote/fields/NrOfDifferentHotChocProducts__c.field-meta.xml
<CustomField>
    <fullName>NrOfDifferentHotChocProducts__c</fullName>
    <label># Different Hot Chocolate Products</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>