force-app/main/default/objects/Quote/fields/NrOfDifferentOtherProducts__c.field-meta.xml
<CustomField>
    <fullName>NrOfDifferentOtherProducts__c</fullName>
    <label># Different Other Products</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>