force-app/main/default/objects/Quote/fields/NrOfDifferentTeaProducts__c.field-meta.xml
<CustomField>
    <fullName>NrOfDifferentTeaProducts__c</fullName>
    <label># Different Tea Products</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>