force-app/main/default/objects/Quote/fields/NrOfQLRefundCoffee__c.field-meta.xml
<CustomField>
    <fullName>NrOfQLRefundCoffee__c</fullName>
    <label># QL Refund Coffee</label>
    <summaryFilterItems>
        <field>QuoteLineItem.RefundCoffee__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>