force-app/main/default/objects/Quote/fields/NrOfQLRefundTea__c.field-meta.xml
<CustomField>
    <fullName>NrOfQLRefundTea__c</fullName>
    <label># QL Refund Tea</label>
    <summaryFilterItems>
        <field>QuoteLineItem.RefundTea__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>