force-app/main/default/objects/Quote/fields/OfferSentDigitally__c.field-meta.xml
<CustomField>
    <fullName>OfferSentDigitally__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer Sent Digitally</label>
    <type>Checkbox</type>
</CustomField>