force-app/main/default/objects/Quote/fields/OppId__c.field-meta.xml
<CustomField>
    <fullName>OppId__c</fullName>
    <formula>OpportunityId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp.Id</label>
    <type>Text</type>
</CustomField>