force-app/main/default/objects/Quote/fields/OtherAdditionalAggreeementsDetails__c.field-meta.xml
<CustomField>
    <fullName>OtherAdditionalAggreeementsDetails__c</fullName>
    <label>Other Additional Aggreeements - Details</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>