force-app/main/default/objects/Quote/fields/OtherAdditionalAggreeementsSpecified__c.field-meta.xml
<CustomField>
    <fullName>OtherAdditionalAggreeementsSpecified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Additional Aggreeements - Specifie</label>
    <type>Checkbox</type>
</CustomField>