force-app/main/default/objects/Quote/fields/PriceConfiguratorQuote__c.field-meta.xml
<CustomField>
    <fullName>PriceConfiguratorQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Configurator Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Quotes (Price Configurator Quote)</relationshipLabel>
    <relationshipName>MachineQuotes</relationshipName>
    <type>Lookup</type>
</CustomField>