force-app/main/default/objects/Quote/fields/ProfessionalSetupRequested__c.field-meta.xml
<CustomField>
    <fullName>ProfessionalSetupRequested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Professional Setup Requested</label>
    <type>Checkbox</type>
</CustomField>