force-app/main/default/objects/Quote/fields/PurchaseQuantityCoffee__c.field-meta.xml
<CustomField>
    <fullName>PurchaseQuantityCoffee__c</fullName>
    <label>Purchase Quantity Coffee (kg)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>