force-app/main/default/objects/Quote/fields/PurchaseQuantityCoffeeStatistical__c.field-meta.xml
<CustomField>
    <fullName>PurchaseQuantityCoffeeStatistical__c</fullName>
    <label>Purchase Quantity Coffee (kg)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>