force-app/main/default/objects/Quote/fields/PurchaseQuantityHotChoc__c.field-meta.xml
<CustomField>
    <fullName>PurchaseQuantityHotChoc__c</fullName>
    <label>Purchase Quantity Hot Choclate (kg)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>