force-app/main/default/objects/Quote/fields/PurchaseQuantityHotChocStatistical__c.field-meta.xml
<CustomField>
    <fullName>PurchaseQuantityHotChocStatistical__c</fullName>
    <label>Purchase Quantity Hot Choc (kg) Stat.</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>