force-app/main/default/objects/Quote/fields/PurchaseQuantityOther__c.field-meta.xml
<CustomField>
    <fullName>PurchaseQuantityOther__c</fullName>
    <label>Purchase Quantity Other (€)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>