force-app/main/default/objects/Quote/fields/PurchaseQuantityOtherStatistical__c.field-meta.xml
<CustomField>
    <fullName>PurchaseQuantityOtherStatistical__c</fullName>
    <label>Purchase Quantity Other (€) Statistical</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>