force-app/main/default/objects/Quote/fields/PurchaseQuantityTea__c.field-meta.xml
<CustomField>
    <fullName>PurchaseQuantityTea__c</fullName>
    <label>Purchase Quantity Tea (€)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>