force-app/main/default/objects/Quote/fields/PurchaseQuantityTeaStatistical__c.field-meta.xml
<CustomField>
    <fullName>PurchaseQuantityTeaStatistical__c</fullName>
    <label>Purchase Quantity Tea (€) Statistical</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>