force-app/main/default/objects/Quote/fields/QualityCheck__c.field-meta.xml
<CustomField>
    <fullName>QualityCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quality Check</label>
    <type>Checkbox</type>
</CustomField>