force-app/main/default/objects/Quote/fields/QuoteAcceptedOverwrite__c.field-meta.xml
<CustomField>
    <fullName>QuoteAcceptedOverwrite__c</fullName>
    <label>Quote accepted overwrite</label>
    <length>100</length>
    <type>Text</type>
</CustomField>