force-app/main/default/objects/Quote/fields/ReasonForDiscountViolation__c.field-meta.xml
<CustomField>
    <fullName>ReasonForDiscountViolation__c</fullName>
    <description>JJDSF-183</description>
    <label>Reason for Discount Violation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>