force-app/main/default/objects/Quote/fields/ReasonForDownPaymentViolation__c.field-meta.xml
<CustomField>
    <fullName>ReasonForDownPaymentViolation__c</fullName>
    <description>JJDSF-192</description>
    <label>Reason for falling below the minimum dep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>