force-app/main/default/objects/Quote/fields/SignerName__c.field-meta.xml
<CustomField>
    <fullName>SignerName__c</fullName>
    <label>Signer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>