force-app/main/default/objects/Quote/fields/SignerTitle__c.field-meta.xml
<CustomField>
    <fullName>SignerTitle__c</fullName>
    <label>Signer Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>