force-app/main/default/objects/Quote/fields/SimulatedDiscount__c.field-meta.xml
<CustomField>
    <fullName>SimulatedDiscount__c</fullName>
    <label>Simulated Discount</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
            <value>
                <fullName>0-10 days</fullName>
            </value>
            <value>
                <fullName>&gt;10 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>