force-app/main/default/objects/Quote/fields/SimulatedGrowthInPercent__c.field-meta.xml
<CustomField>
    <fullName>SimulatedGrowthInPercent__c</fullName>
    <label>Simulated Growth in %</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-5%</fullName>
            </value>
            <value>
                <fullName>5-10%</fullName>
            </value>
            <value>
                <fullName>10-15%</fullName>
            </value>
            <value>
                <fullName>&gt; 15%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>