force-app/main/default/objects/Quote/fields/SimulatedGrowthInSales__c.field-meta.xml
<CustomField>
    <fullName>SimulatedGrowthInSales__c</fullName>
    <label>Simulated Growth In Sales</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 2.000€</fullName>
            </value>
            <value>
                <fullName>&lt; 10.000€</fullName>
            </value>
            <value>
                <fullName>&gt;= 10.000€</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>