force-app/main/default/objects/Quote/fields/Simulation__c.field-meta.xml
<CustomField>
    <fullName>Simulation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-1483 Ob eine Simulation vorliegt</description>
    <label>Simulation</label>
    <type>Checkbox</type>
</CustomField>