force-app/main/default/objects/Quote/fields/SkipValidations__c.field-meta.xml
<CustomField>
    <fullName>SkipValidations__c</fullName>
    <label>Skip Validations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>