force-app/main/default/objects/Quote/fields/TeaRefundBasis__c.field-meta.xml
<CustomField>
    <fullName>TeaRefundBasis__c</fullName>
    <label>Tea Refund Basis</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>