force-app/main/default/objects/Quote/fields/TeaRefundType__c.field-meta.xml
<CustomField>
    <fullName>TeaRefundType__c</fullName>
    <label>Tea Refund Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Based on sales</fullName>
            </value>
            <value>
                <fullName>Base on turnover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>