force-app/main/default/objects/Quote/fields/TemporaryDiscountOnAccessories__c.field-meta.xml
<CustomField>
    <fullName>TemporaryDiscountOnAccessories__c</fullName>
    <label>Temporary discount on accessories</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>