force-app/main/default/objects/Quote/fields/TemporaryDiscountOnBaseComponent__c.field-meta.xml
<CustomField>
    <fullName>TemporaryDiscountOnBaseComponent__c</fullName>
    <label>Temporary discount on base component</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>