force-app/main/default/objects/Quote/fields/TemporaryDiscountOnBaseMachine__c.field-meta.xml
<CustomField>
    <fullName>TemporaryDiscountOnBaseMachine__c</fullName>
    <label>Temporary discount on base machine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>