force-app/main/default/objects/Quote/fields/TodayPlus42Days__c.field-meta.xml
<CustomField>
    <fullName>TodayPlus42Days__c</fullName>
    <formula>TODAY()+42</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today Plus 42 Days</label>
    <type>Date</type>
</CustomField>