force-app/main/default/objects/Quote/fields/TotalAmountMaschine__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountMaschine__c</fullName>
    <label>Total Amount Maschine [LÖSCHEN]</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>