force-app/main/default/objects/Quote/fields/TotalDiscountDrinkingChocolate__c.field-meta.xml
<CustomField>
    <fullName>TotalDiscountDrinkingChocolate__c</fullName>
    <formula>DiscountPurchaseQuantityHotChocolate__c
+ DiscountDigitalOrdering__c
+ DiscountBrandRepresentationTable__c
+ DiscountBrandRepresentationOnSite__c
+ DiscountBrandRepresentationMenu__c
+ DiscountVariousDrinkingChocolates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount: Drinking Chocolate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>