force-app/main/default/objects/Quote/fields/TotalDiscountDrinkingChocolateExclGRIK__c.field-meta.xml
<CustomField>
    <fullName>TotalDiscountDrinkingChocolateExclGRIK__c</fullName>
    <formula>DiscountPurchaseQuantityHotChocolate__c
+ DiscountDigitalOrdering__c
+ DiscountBaseDiscountHotChocolate__c
+ DiscountBrandRepresentationTable__c
+ DiscountBrandRepresentationOnSite__c
+ DiscountBrandRepresentationMenu__c
+ DiscountVariousDrinkingChocolates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount: Drinking Chocolate (excl</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>