force-app/main/default/objects/Quote/fields/TotalDiscountMiscellaneous__c.field-meta.xml
<CustomField>
    <fullName>TotalDiscountMiscellaneous__c</fullName>
    <formula>DiscountPurchaseQuantityOther__c
+ DiscountDigitalOrdering__c
+ DiscountBaseDiscountOther__c
+ DiscountIndexCondition__c
+ DiscountBrandRepresentationTable__c
+ DiscountBrandRepresentationOnSite__c
+ DiscountBrandRepresentationMenu__c
+ DiscountVariousMiscellaneousItems__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount: Miscellaneous</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>