force-app/main/default/objects/Quote/fields/TotalDiscountRoastedCoffee__c.field-meta.xml
<CustomField>
    <fullName>TotalDiscountRoastedCoffee__c</fullName>
    <formula>DiscountPurchaseQuantityCoffee__c
+ DiscountDigitalOrdering__c
+ DiscountBaseDiscountCoffee__c
+ DiscountIndexCondition__c
+ DiscountBrandRepresentationTable__c
+ DiscountBrandRepresentationOnSite__c
+ DiscountBrandRepresentationMenu__c
+ DiscountVariousCoffeeAccessories__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount: Roasted Coffee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>