force-app/main/default/objects/Quote/fields/TotalDiscountRoastedCoffeeExclGRIK__c.field-meta.xml
<CustomField>
    <fullName>TotalDiscountRoastedCoffeeExclGRIK__c</fullName>
    <formula>DiscountPurchaseQuantityCoffee__c
+ DiscountDigitalOrdering__c
+ DiscountBrandRepresentationTable__c
+ DiscountBrandRepresentationOnSite__c
+ DiscountBrandRepresentationMenu__c
+ DiscountVariousCoffeeAccessories__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount: Roasted Coffee (excl. GR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>