force-app/main/default/objects/Quote/fields/TotalDiscountTea__c.field-meta.xml
<CustomField>
    <fullName>TotalDiscountTea__c</fullName>
    <formula>DiscountPurchaseQuantityTea__c
+ DiscountDigitalOrdering__c
+ DiscountBaseDiscountTea__c
+ DiscountIndexCondition__c
+ DiscountBrandRepresentationTable__c
+ DiscountBrandRepresentationOnSite__c
+ DiscountBrandRepresentationMenu__c
+ DiscountVariousTeaItems__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount: Tea</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>