force-app/main/default/objects/Quote/fields/TotalDiscountTeaexclGRIK__c.field-meta.xml
<CustomField>
    <fullName>TotalDiscountTeaexclGRIK__c</fullName>
    <formula>DiscountPurchaseQuantityTea__c
+ DiscountDigitalOrdering__c
+ DiscountBrandRepresentationTable__c
+ DiscountBrandRepresentationOnSite__c
+ DiscountBrandRepresentationMenu__c
+ DiscountVariousTeaItems__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount: Tea (excl. GR/IK)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>