force-app/main/default/objects/Quote/fields/TotalValueofInitialEquipment__c.field-meta.xml
<CustomField>
    <fullName>TotalValueofInitialEquipment__c</fullName>
    <label>Total Value of Initial Equipment</label>
    <summarizedField>InitialEquipment__c.Sum__c</summarizedField>
    <summaryForeignKey>InitialEquipment__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>