force-app/main/default/objects/Quote/fields/TotalValueOfQuote__c.field-meta.xml
<CustomField>
    <fullName>TotalValueOfQuote__c</fullName>
    <formula>TotalValueofInitialEquipment__c +
PurchaseQuantityOther__c +
PurchaseQuantityTea__c +
( PurchaseQuantityCoffee__c * ((LowestPriceCoffeeProducts__c + HighestPriceCoffeeProducts__c ) /2 )) +
( PurchaseQuantityHotChoc__c * (( LowestPriceHotChocProducts__c + HighestPriceHotChocProducts__c) /2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Value of Quote</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>