force-app/main/default/objects/Quote/fields/WKZCoffeeAnnualBonus__c.field-meta.xml
<CustomField>
    <fullName>WKZCoffeeAnnualBonus__c</fullName>
    <label>WKZ Coffee Annual - Bonus</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>