force-app/main/default/objects/Quote/fields/WKZCoffeeOneTimeBonus__c.field-meta.xml
<CustomField>
    <fullName>WKZCoffeeOneTimeBonus__c</fullName>
    <label>WKZ Coffee One-Time Bonus</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>