force-app/main/default/objects/Quote/fields/WKZTeaAnnualBonus__c.field-meta.xml
<CustomField>
    <fullName>WKZTeaAnnualBonus__c</fullName>
    <label>WKZ Tea Annual - Bonus</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>