force-app/main/default/objects/Quote/validationRules/StatusAccepted_ChangeBack.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusAccepted_ChangeBack</fullName>
    <active>false</active>
    <description>Prevents moving a Quote out of &apos;Quote Accepted&apos; status.</description>
    <errorConditionFormula>ISCHANGED(Status) &amp;&amp; 
ISPICKVAL(PRIORVALUE(Status), &apos;Quote Accepted&apos;)&amp;&amp;
NOT ( ISPICKVAL (Status, &apos;Quote Accepted&apos;) ) &amp;&amp; 
NOT (ISCHANGED (SkipValidations__c))</errorConditionFormula>
    <errorMessage>An accepted quote cannot be reverted!</errorMessage>
</ValidationRule>