force-app/main/default/objects/Quote/validationRules/StatusRejected_ChangeBack.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusRejected_ChangeBack</fullName>
    <active>false</active>
    <description>Prevents moving a Quote out of &apos;Quote Rejected&apos; status.</description>
    <errorConditionFormula>ISCHANGED(Status) &amp;&amp; 
ISPICKVAL(PRIORVALUE(Status), &apos;Quote Rejected&apos;) &amp;&amp; 
NOT ( ISPICKVAL (Status, &apos;Quote Rejected&apos;) )&amp;&amp; 
NOT (ISCHANGED (SkipValidations__c))</errorConditionFormula>
    <errorMessage>A rejected quote cannot be reverted!</errorMessage>
</ValidationRule>