force-app/main/default/objects/Quote/validationRules/V2_Base_Discount_Cocoa_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>V2_Base_Discount_Cocoa_Range</fullName>
    <active>false</active>
    <description>Restricts base cocoa discount to a range of 0-100%.</description>
    <errorConditionFormula>NOT(ISBLANK(	DiscountBaseDiscountHotChocolate__c)) &amp;&amp; 
(	DiscountBaseDiscountHotChocolate__c &lt; 0 || 
	DiscountBaseDiscountHotChocolate__c &gt; 100)</errorConditionFormula>
    <errorMessage>Base discount for hot chocolate must be between 0% and 100%.</errorMessage>
</ValidationRule>