force-app/main/default/objects/Quote/validationRules/V2_CashDiscount_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>V2_CashDiscount_Range</fullName>
    <active>false</active>
    <description>Restricts cash discount to a range of 0-10%.</description>
    <errorConditionFormula>NOT(ISBLANK(DiscountSimulatedDiscount__c)) &amp;&amp; 
(DiscountSimulatedDiscount__c &lt; 0 || DiscountSimulatedDiscount__c &gt; 10)</errorConditionFormula>
    <errorMessage>Cash discount must be between 0% and 10%.</errorMessage>
</ValidationRule>