force-app/main/default/objects/Quote/validationRules/V2_Volume_Cocoa_NonNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>V2_Volume_Cocoa_NonNegative</fullName>
    <active>true</active>
    <description>Enforces non-negative target volume for hot chocolate.</description>
    <errorConditionFormula>NOT(ISBLANK(	PurchaseQuantityHotChoc__c)) &amp;&amp; 
	PurchaseQuantityHotChoc__c &lt; 0</errorConditionFormula>
    <errorMessage>Hot chocolate target volume in kg cannot be negative.</errorMessage>
</ValidationRule>