force-app/main/default/objects/Quote/validationRules/V2_Volume_Coffee_NonNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>V2_Volume_Coffee_NonNegative</fullName>
    <active>false</active>
    <description>Enforces non-negative target volume for coffee.</description>
    <errorConditionFormula>NOT(ISBLANK(	PurchaseQuantityCoffee__c))
&amp;&amp; 	PurchaseQuantityCoffee__c &lt; 0</errorConditionFormula>
    <errorMessage>Coffee target volume in kg cannot be negative.</errorMessage>
</ValidationRule>