force-app/main/default/objects/Quote/validationRules/V2_Volume_Other_NonNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>V2_Volume_Other_NonNegative</fullName>
    <active>false</active>
    <description>Enforces non-negative target volume for miscellaneous items.</description>
    <errorConditionFormula>NOT(ISBLANK(	PurchaseQuantityOther__c))
&amp;&amp; 	PurchaseQuantityOther__c &lt; 0</errorConditionFormula>
    <errorMessage>Target volume for miscellaneous items cannot be negative.</errorMessage>
</ValidationRule>