force-app/main/default/objects/Quote/validationRules/V2_Volume_Tea_NonNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>V2_Volume_Tea_NonNegative</fullName>
    <active>false</active>
    <description>Enforces non-negative target volume for tea.</description>
    <errorConditionFormula>NOT(ISBLANK(	PurchaseQuantityTea__c)) &amp;&amp;	PurchaseQuantityTea__c &lt; 0</errorConditionFormula>
    <errorMessage>Tea target volume cannot be negative.</errorMessage>
</ValidationRule>